tests/baselines/reference/checkDestructuringShorthandAssigment.errors.txt
tests/cases/compiler/bug25434.js(4,9): error TS2304: Cannot find name 'b'.


==== tests/cases/compiler/bug25434.js (1 errors) ====
    // should not crash while checking
    function Test({ b = '' } = {}) {}
    
    Test(({ b = '5' } = {}));
            ~
!!! error TS2304: Cannot find name 'b'.
    